@@ -52,3 +52,20 @@ func BindPluginsFlagToViper(cmd *cobra.Command) {
 	viper.SetDefault("plugins-dir", commands.Cfg.DefaultPluginDir)
 	viper.SetDefault("lookup-plugins", false)
 }
+
+// AllowedExtensibleCommandGroups the list of command groups that can be
+// extended with plugins, e.g., a plugin named `kn-source-kafka` for Kafka
+// event sources is allowed. This is defined as a fixed [...]string since
+// cannot defined Golang []string constants
+var AllowedExtensibleCommandGroups = [...]string{"source"}
+
+// InAllowedExtensibleCommandGroups checks that the name is in the list of allowed
+// extensible command groups
+func InAllowedExtensibleCommandGroups(name string) bool {
+	for _, groupName := range AllowedExtensibleCommandGroups {
+		if name == groupName {
+			return true
+		}
+	}
+	return false
+}
